# myportfolio

./: .env  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
claver/: asgi.py  settings.py  urls.py  wsgi.py
home/: admin.py  models.py  sitemaps.py  urls.py  utils.py  views.py
home/migrations/: 0001_initial.py
static/css/: styles.css
templates/: contact.html  index.html  projects.html
templates/base/: base.html  header.html  pagination.html
