[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "This is my portfolio."
authors = ["cla-bit <doublep098@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
django-widget-tweaks = "^1.5"
python-decouple = "^3.8"
pillow = "^10.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1"
black = "^24.3"
mypy = "^1.9"

[tool.black]
target-version = ['py310', 'py311']
include = '\.pyi?$'

#Disable the package mode. This is only for dependency management not for packageing
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
