[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "This is my portfolio."
authors = ["cla-bit <doublep098@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
django-widget-tweaks = "^1.5"
python-decouple = "^3.8"
pillow = "^10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
